--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="images/logo.png" />
     <script src="https://kit.fontawesome.com/5d5716bc3e.js" crossorigin="anonymous"></script>
     <title>Bike Responsive Website</title>
